Fix position when full sidebar is visible.

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -332,6 +332,7 @@
 
     &.is--visible {
         display: block;
+        left: 0px;
     }
 
     @include breakpoint($large) {
